--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^5.1.0
   cupertino_icons: ^1.0.4
+ 
 
 dev_dependencies:
   flutter_test:
